alterando a seção MAIS INFO

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </div><!-- end section -->
 
             <section class="section nopad cac text-center">
-                <a href="#"><h3>Interesting our awesome barber services? Just drop an appointment form below!</h3></a>
+                <a href="#"><h3>Você está interessado no trabalho incrivel da nossa equipa? Clique aqui</h3></a>
             </section>
 
             <div class="section wb">
@@ -134,13 +134,13 @@
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 text-center">
                             <div class="message-box">
-                                <h4>About</h4>
-                                <h2>Welcome to SMBarber</h2>
+                                <h4>SOBRE</h4>
+                                <h3 style="font-size:29px">Bem-vindo ao <b>Salão de Beleza da July</b></h3>
                                 <p class="lead">Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
 
                                 <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed vitae rutrum neque. Ut id erat sit amet libero bibendum aliquam. Donec ac egestas libero, eu bibendum risus. Phasellus et congue justo. </p>
 
-                                <a href="#services" data-scroll class="btn btn-light btn-radius btn-brd grd1 effect-1">Learn More</a>
+                                <a href="#services" data-scroll class="btn btn-light btn-radius btn-brd grd1 effect-1">VER MAIS</a>
                             </div><!-- end messagebox -->
                         </div><!-- end col -->
                     </div><!-- end row -->
@@ -151,9 +151,9 @@
 						<div class="col-md-12">
 							<div class="about-tab">
 								<ul class="nav nav-tabs">
-									<li class="active"><a href="#tab_a" data-toggle="tab">Our Mission</a></li>
-									<li><a href="#tab_b" data-toggle="tab">Why Us?</a></li>
-									<li><a href="#tab_c" data-toggle="tab">About Us</a></li>								
+									<li class="active"><a href="#tab_a" data-toggle="tab">Nossa Missão</a></li>
+									<li><a href="#tab_b" data-toggle="tab">Porquê nós?</a></li>
+									<li><a href="#tab_c" data-toggle="tab">Sobre Nós</a></li>								
 								</ul>
 								<div class="tab-content">
 									<div class="tab-pane fade in active" id="tab_a">
@@ -161,7 +161,7 @@
 										<p>Vestibulum ac quam id lorem semper condimentum. Nulla vel ligula turpis. Nullam luctus, mi nec rhoncus gravida, tortor est semper purus, a feugiat sapien odio non urna. Fusce pellentesque neque ut nisi rhoncus imperdiet. Sed eu purus vel turpis consectetur convallis. Donec a dolor tellus. Phasellus dignissim erat nec ipsum condimentum sollicitudin. </p>
 									</div>
 									<div class="tab-pane fade" id="tab_b">
-										<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi scelerisque tortor mi, eget mattis velit sagittis id. Duis ornare mauris eu eros interdum, vitae finibus arcu ultricies. Donec vitae felis eleifend, dignissim erat a, pretium diam. Donec eu massa odio. Suspendisse et ornare lacus, pharetra imperdiet ligula.</p>
 										<ul>
 											<li><i class="fa fa-circle-o" aria-hidden="true"></i>User Experince</li>
 											<li><i class="fa fa-circle-o" aria-hidden="true"></i>Full Devices</li>
@@ -172,7 +172,7 @@
 										</ul>
 									</div>
 									<div class="tab-pane fade" id="tab_c">
-										<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi scelerisque tortor mi, eget mattis velit sagittis id. Duis ornare mauris eu eros interdum, vitae finibus arcu ultricies. Donec vitae felis eleifend, dignissim erat a, pretium diam. Donec eu massa odio. Suspendisse et ornare lacus, pharetra imperdiet ligula.</p>
 									</div>
 								</div><!-- tab content -->
 							</div>
