Secao NOSSA EQUPE criada

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <meta name="author" content="">
 
     <!-- Site Icons -->
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -59,7 +59,7 @@
         <div id="sidebar-wrapper">
 			<div class="side-top">
 				<div class="logo-sidebar">
-					<a href="index.html"><img src="images/logos/logo.png" alt="image"></a>
+					<a href="index.html"><img src="/images/logos/logo.png" alt="image"></a>
                     <div class="nome-salao">
                     <div>July Otchacati</div>
                     <div>Salão de beleza estético</div>
@@ -81,7 +81,7 @@
         <div id="page-content-wrapper">
             <a href="#menu-toggle" class="menuopener" id="menu-toggle"><i class="fa fa-bars"></i></a>
 			
-            <div id="home" class="parallax first-section" data-stellar-background-ratio="0.4" style="background-image:url('images/banner.jpg');">
+            <div id="home" class="parallax first-section" data-stellar-background-ratio="0.4" style="background-image:url('/images/banner.jpg');">
                 <div class="container-fluid">
                     <div class="row">
 						<div id="full-width" class="owl-carousel owl-theme">
@@ -182,13 +182,18 @@
                     <hr class="hr1"> 
 
                     <div class="row text-center">
+                        <div class="section-title">
+                            <small>VEJA OS NOSSOS TRABALHOS ANTERIORES</small>
+                            <h3>TRABALHOS REALIZADOS</h3>
+                            <hr class="grd1">
+                        </div>
                         <div class="col-md-4 col-sm-6 col-xs-12">
                            <div class="service-widget">
                                 <div class="post-media wow fadeIn">
-                                    <a href="uploads/barber_01.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
-                                    <img src="uploads/barber_01.jpg" alt="" class="img-responsive img-rounded">
+                                    <a href="/images/demo2.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                                    <img src="/images/demo2.jpg" alt="" class="img-responsive img-rounded">
                                 </div>
-                                <h3>Show us Your Graft Style</h3>
+                                <h3>Trabalho 1</h3>
                                 <p>Aliquam sagittis ligula et sem lacinia, ut facilisis enim sollicitudin. Proin nisi est, convallis nec purus vitae, iaculis posuere sapien. Cum sociis natoque.</p>
                             </div><!-- end service -->
                         </div>
@@ -196,10 +201,10 @@
                         <div class="col-md-4 col-sm-6 col-xs-12">
                             <div class="service-widget">
                                 <div class="post-media wow fadeIn">
-                                    <a href="uploads/barber_02.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
-                                    <img src="uploads/barber_02.jpg" alt="" class="img-responsive img-rounded">
+                                    <a href="/images/demo4.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                                    <img src="/images/demo4.jpg" alt="" class="img-responsive img-rounded">
                                 </div>
-                                <h3>Outstanding Barber Shop</h3>
+                                <h3>Trabalho 2</h3>
                                 <p>Duis at tellus at dui tincidunt scelerisque nec sed felis. Suspendisse id dolor sed leo rutrum euismod. Nullam vestibulum fermentum erat. It nam auctor. </p>
                             </div><!-- end service -->
                         </div>
@@ -207,10 +212,10 @@
                         <div class="col-md-4 col-sm-6 col-xs-12">
                             <div class="service-widget">
                                 <div class="post-media wow fadeIn">
-                                    <a href="uploads/barber_03.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
-                                    <img src="uploads/barber_03.jpg" alt="" class="img-responsive img-rounded">
+                                    <a href="/images/demo3.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                                    <img src="/images/demo3.jpg" alt="" class="img-responsive img-rounded">
                                 </div>
-                                <h3>The Barber Materials</h3>
+                                <h3>Trabalho 3</h3>
                                 <p>Etiam materials ut mollis tellus, vel posuere nulla. Etiam sit amet lacus vitae massa sodales aliquam at eget quam. Integer ultricies et magna quis posuere.</p>
                             </div><!-- end service -->
                         </div>
@@ -222,8 +227,8 @@
                 <div class="container-fluid">
                     <div class="section-title row text-center">
                         <div class="col-md-8 col-md-offset-2">
-                        <small>MEET OUR BABRER TEAM</small>
-                        <h3>OUR BARBERS</h3>
+                        <small>CONHEÇA A NOSSA EQUIPE</small>
+                        <h3>NOSSA EQUIPE</h3>
                         <hr class="grd1">
                         <p class="lead">Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
                         </div>
@@ -233,66 +238,63 @@
                         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
                             <div class="widget clearfix">
 								<div class="hover-br">
-									<img src="uploads/barber_team_01.jpg" alt="" class="img-responsive">
+									<img src="/images/demo1.webp" alt="" class="img-responsive">
 									<div class="social-up-hover">
 										<div class="footer-social">
 											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-github"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-twitter"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-linkedin"></i></a>
+											<a href="#" class="btn grd1"><i class="fa fa-google"></i></a>
+											<a href="#" class="btn grd1"><i class="fa fa-whatsapp"></i></a>
 										</div>
 									</div>
 								</div>
                                 <div class="widget-title">
-                                    <h3>Soren Bo Bostian</h3>
-                                    <small>The Founder</small>
+                                    <h3>Nome da Pessoa</h3>
+                                    <small>A Fundadora</small>
                                 </div>
                                 <!-- end title -->
-                                <p>Hello guys, I am Soren from Sirbistana. I am senior art director and founder of The Barber Shop Company.</p>
+                                <p>Uma mensagem que a pessoa queira passar, uma breve descrição sobre ela mesma ou mesmo uma observação sobre suas competencias técnicas.</p>
                             </div><!--widget -->
                         </div><!-- end col -->
 
                         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
                             <div class="widget clearfix">
 								<div class="hover-br">
-									<img src="uploads/barber_team_03.jpg" alt="" class="img-responsive">
+									<img src="/images/demo1.webp" alt="" class="img-responsive">
 									<div class="social-up-hover">
 										<div class="footer-social">
 											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-github"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-twitter"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-linkedin"></i></a>
+											<a href="#" class="btn grd1"><i class="fa fa-google"></i></a>
+											<a href="#" class="btn grd1"><i class="fa fa-whatsapp"></i></a>
 										</div>
 									</div>
 								</div>
                                 <div class="widget-title">
-                                    <h3>Bryan Saftler</h3>
-                                    <small>The Barber</small>
+                                    <h3>Nome da pessoa</h3>
+                                    <small>A Cabelereira</small>
                                 </div>
                                 <!-- end title -->
-                                <p>Hello guys, I am Soren from Sirbistana. I am senior art director and barber of the Barber Shop Market.</p>
+                                <p>Uma mensagem que a pessoa queira passar, uma breve descrição sobre ela mesma ou mesmo uma observação sobre suas competencias técnicas.</p>
                             </div><!--widget -->
                         </div><!-- end col -->
 
                         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
                             <div class="widget clearfix">
 								<div class="hover-br">
-									<img src="uploads/barber_team_02.jpg" alt="" class="img-responsive">
+									<img src="/images/demo1.webp" alt="" class="img-responsive">
 									<div class="social-up-hover">
 										<div class="footer-social">
 											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-github"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-twitter"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-linkedin"></i></a>
+											<a href="#" class="btn grd1"><i class="fa fa-google"></i></a>
+											<a href="#" class="btn grd1"><i class="fa fa-whatsapp"></i></a>
 										</div>
 									</div>
 								</div>
                                 <div class="widget-title">
-                                    <h3>Matthew Bayliss</h3>
-                                    <small>The Barber</small>
+                                    <h3>Nome da pessoa</h3>
+                                    <small>O Barbeiro</small>
                                 </div>
                                 <!-- end title -->
-                                <p>Hello guys, I am Soren from Sirbistana. I am senior art director and barber of the Barber Shop Website.</p>
+                                <p>Uma mensagem que a pessoa queira passar, uma breve descrição sobre ela mesma ou mesmo uma observação sobre suas competencias técnicas.</p>
                             </div><!--widget -->
                         </div><!-- end col -->
                     </div><!-- end row -->
