ajustes e mais ajustes

--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@
                 <div class="container-fluid">
                     <div class="section-title row text-center">
                         <div class="col-md-8 col-md-offset-2">
-                        <small>LET'S SEE OUR TESTIMONIALS</small>
-                        <h3>HAPPY TESTIMONIALS</h3>
+                        <small>RECOMENDAÇÕES DE CLIENTES</small>
+                        <h3>RECOMENDAÇÕES</h3>
                         <hr class="grd1">
                         <p class="lead">Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
                         </div>
@@ -317,48 +317,47 @@
                             <div class="testi-carousel owl-carousel owl-theme">                                
                                 <div class="testimonial clearfix">
                                     <div class="desc">
-                                        <h3><i class="fa fa-quote-left"></i> Wonderful Support!</h3>
-                                        <p class="lead">They have got my project on time with the competition with a sed highly skilled, and experienced & professional team.</p>
+                                        <h3><i class="fa fa-quote-left"></i> Suporte Incrivel</h3>
+                                        <p class="lead">Aqui vai algum comentário que esta pessoa está a fazer sobre o Salão da July, seus Serviços, suas experiencias enquanto cliente. Basicamente o seu testemundo sincero.</p>
                                     </div>
                                     <div class="testi-meta">
                                         <img src="uploads/testi_01.png" alt="" class="img-responsive alignright">
-                                        <h4>James Fernando <small>- Manager of Racer</small></h4>
+                                        <h4>Nome da Pessoa <small>- Profissão</small></h4>
                                     </div>
                                     <!-- end testi-meta -->
                                 </div>
+                                <div class="testimonial clearfix">
+                                    <div class="desc">
+                                        <h3><i class="fa fa-quote-left"></i> Equipe Talentosa</h3>
+                                        <p class="lead">Aqui vai algum comentário que esta pessoa está a fazer sobre o Salão da July, seus Serviços, suas experiencias enquanto cliente. Basicamente o seu testemundo sincero.</p>
+                                    </div>
+                                    <div class="testi-meta">
+                                        <img src="/images/demo4.jpg" alt="" class="img-responsive alignright">
+                                        <h4>Nome da Pessoa <small>- Profissão</small></h4>
+                                    </div>
+                                    <!-- end testi-meta -->
+                                </div>
+                                <div class="testimonial clearfix">
+                                    <div class="desc">
+                                        <h3><i class="fa fa-quote-left"></i> Serviços Incriveis</h3>
+                                        <p class="lead">Aqui vai algum comentário que esta pessoa está a fazer sobre o Salão da July, seus Serviços, suas experiencias enquanto cliente. Basicamente o seu testemundo sincero.</p>
+                                    </div>
+                                    <div class="testi-meta">
+                                        <img src="uploads/testi_01.png" alt="" class="img-responsive alignright">
+                                        <h4>Nome da Pessoa <small>- Profissão</small></h4>
+                                    </div>
+                                    <!-- end testi-meta -->
+                                </div>
+                                
                                 <!-- end testimonial -->
                                 <div class="testimonial clearfix">
                                     <div class="desc">
-                                        <h3><i class="fa fa-quote-left"></i> Awesome Services!</h3>
-                                        <p class="lead">Explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you completed.</p>
+                                        <h3><i class="fa fa-quote-left"></i> Suporte Incrivel</h3>
+                                        <p class="lead">Aqui vai algum comentário que esta pessoa está a fazer sobre o Salão da July, seus Serviços, suas experiencias enquanto cliente. Basicamente o seu testemundo sincero.</p>
                                     </div>
                                     <div class="testi-meta">
-                                        <img src="uploads/testi_02.png" alt="" class="img-responsive alignright">
-                                        <h4>Jacques Philips <small>- Designer</small></h4>
-                                    </div>
-                                    <!-- end testi-meta -->
-                                </div>
-                                <!-- end testimonial -->
-                                <div class="testimonial clearfix">
-                                    <div class="desc">
-                                        <h3><i class="fa fa-quote-left"></i> Great & Talented Team!</h3>
-                                        <p class="lead">The master-builder of human happines no one rejects, dislikes avoids pleasure itself, because it is very pursue pleasure. </p>
-                                    </div>
-                                    <div class="testi-meta">
-                                        <img src="uploads/testi_03.png" alt="" class="img-responsive alignright">
-                                        <h4>Venanda Mercy <small>- Newyork City</small></h4>
-                                    </div>
-                                    <!-- end testi-meta -->
-                                </div>
-                                <!-- end testimonial -->
-								<div class="testimonial clearfix">
-                                    <div class="desc">
-                                        <h3><i class="fa fa-quote-left"></i> Great & Talented Team!</h3>
-                                        <p class="lead">The master-builder of human happines no one rejects, dislikes avoids pleasure itself, because it is very pursue pleasure. </p>
-                                    </div>
-                                    <div class="testi-meta">
-                                        <img src="uploads/testi_03.png" alt="" class="img-responsive alignright">
-                                        <h4>Venanda Mercy <small>- Newyork City</small></h4>
+                                        <img src="/images/demo1.webp" alt="" class="img-responsive alignright">
+                                        <h4>Nome da Pessoa <small>- Profissão</small></h4>
                                     </div>
                                     <!-- end testi-meta -->
                                 </div>
