--- a/barbers.html
+++ b/barbers.html
@@ -59,7 +59,11 @@
         <div id="sidebar-wrapper">
 			<div class="side-top">
 				<div class="logo-sidebar">
-					<a href="index.html"><img src="images/logos/logo.png" alt="image"></a>
+					<a href="index.html"><img src="/images/logos/logo.png" alt="image"></a>
+                    <div class="nome-salao">
+                    <div>July Otchacati</div>
+                    <div>Salão de beleza estético</div>
+                </div>
 				</div>
 				<ul class="sidebar-nav">
 					<li><a href="index.html">Home</a></li>
