--- a/index.html
+++ b/index.html
@@ -373,24 +373,26 @@
                     <div class="footer-distributed">
                         <div class="footer-left">
                             <p class="footer-links">
-                                <a href="#">Home</a>
-                                <a href="#">Blog</a>
-                                <a href="#">Pricing</a>
-                                <a href="#">About</a>
-                                <a href="#">Faq</a>
-                                <a href="#">Contact</a>
+                                <a href="index.html">Home</a>
+					            <a href="about.html">Sobre Nós</a>
+					            <a href="services.html">Serviços</a>
+            					<a href="barbers.html">Nossa Equipe</a>
+			            		<a href="appointment.html">Horário</a>
+					            <a href="contact.html">Contacto</a>
                             </p>
                             <p class="footer-company-name">All Rights Reserved. &copy; 2018 <a href="#">SMBarber</a> Design By : <a href="https://html.design/">html design</a></p>
                         </div>
-
-                        <div class="footer-right">
-                            <form method="get" action="#">
-                                <input placeholder="Subscribe our newsletter.." name="search">
-                                <i class="fa fa-envelope-o"></i>
-                            </form>
-                        </div>
                     </div>
+                    
                 </div><!-- end container -->
+                <div class="footer-links-social">
+                    <ul class="list-unstyled">
+                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa fa-whatsapp"></i></a></li>
+                        <li><a href="#"><i class="fa fa-google"></i></a></li>
+                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                    </ul>
+                </div>
             </div><!-- end copyrights -->
         </div>
     </div><!-- end wrapper -->
