--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 			            		<a href="appointment.html">Horário</a>
 					            <a href="contact.html">Contacto</a>
                             </p>
-                            <p class="footer-company-name">All Rights Reserved. &copy; 2018 <a href="#">SMBarber</a> Design By : <a href="https://html.design/">html design</a></p>
+                            <p class="footer-company-name">Todos os direitos reservados. &copy; <span class="ano_atual">2022</span> &nbsp; <a href="#">July Otchacati - Salão de Beleza Estético</a></p>
                         </div>
                     </div>
                     
