--- a/index.html
+++ b/index.html
@@ -148,36 +148,18 @@
 					<hr class="hr1"> 
 					
 					<div class="row">
-						<div class="col-md-12">
-							<div class="about-tab">
-								<ul class="nav nav-tabs">
-									<li class="active"><a href="#tab_a" data-toggle="tab">Nossa Missão</a></li>
-									<li><a href="#tab_b" data-toggle="tab">Porquê nós?</a></li>
-									<li><a href="#tab_c" data-toggle="tab">Sobre Nós</a></li>								
-								</ul>
-								<div class="tab-content">
-									<div class="tab-pane fade in active" id="tab_a">
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi scelerisque tortor mi, eget mattis velit sagittis id. Duis ornare mauris eu eros interdum, vitae finibus arcu ultricies. Donec vitae felis eleifend, dignissim erat a, pretium diam. Donec eu massa odio. Suspendisse et ornare lacus, pharetra imperdiet ligula.</p>
-										<p>Vestibulum ac quam id lorem semper condimentum. Nulla vel ligula turpis. Nullam luctus, mi nec rhoncus gravida, tortor est semper purus, a feugiat sapien odio non urna. Fusce pellentesque neque ut nisi rhoncus imperdiet. Sed eu purus vel turpis consectetur convallis. Donec a dolor tellus. Phasellus dignissim erat nec ipsum condimentum sollicitudin. </p>
-									</div>
-									<div class="tab-pane fade" id="tab_b">
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi scelerisque tortor mi, eget mattis velit sagittis id. Duis ornare mauris eu eros interdum, vitae finibus arcu ultricies. Donec vitae felis eleifend, dignissim erat a, pretium diam. Donec eu massa odio. Suspendisse et ornare lacus, pharetra imperdiet ligula.</p>
-										<ul>
-											<li><i class="fa fa-circle-o" aria-hidden="true"></i>User Experince</li>
-											<li><i class="fa fa-circle-o" aria-hidden="true"></i>Full Devices</li>
-											<li><i class="fa fa-circle-o" aria-hidden="true"></i>Awesome Design</li>
-											<li><i class="fa fa-circle-o" aria-hidden="true"></i>Visual Impact</li>
-											<li><i class="fa fa-circle-o" aria-hidden="true"></i>100% Sincronized</li>
-											<li><i class="fa fa-circle-o" aria-hidden="true"></i>Custom Support</li>
-										</ul>
-									</div>
-									<div class="tab-pane fade" id="tab_c">
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi scelerisque tortor mi, eget mattis velit sagittis id. Duis ornare mauris eu eros interdum, vitae finibus arcu ultricies. Donec vitae felis eleifend, dignissim erat a, pretium diam. Donec eu massa odio. Suspendisse et ornare lacus, pharetra imperdiet ligula.</p>
-									</div>
-								</div><!-- tab content -->
-							</div>
-						</div><!-- end col -->
-					</div><!-- end row -->
+                        <div class="col-md-8 col-md-offset-2 text-center">
+                            <div class="message-box">
+                                <h4>MISSÃO, VALORES E OBJETIVOS</h4>
+                                <h3 style="font-size:29px">Missão</h3>
+                                <p class="lead">Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
+
+                                <!-- <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed vitae rutrum neque. Ut id erat sit amet libero bibendum aliquam. Donec ac egestas libero, eu bibendum risus. Phasellus et congue justo. </p> -->
+
+                                <a href="/about.html" class="btn btn-light btn-sm btn-radius btn-brd grd1 effect-1">MAIS SOBRE NÓS</a>
+                            </div><!-- end messagebox -->
+                        </div><!-- end col -->
+                    </div><!-- end row -->
 					
                     <hr class="hr1"> 
 
