preloader retirado em todas as paginas

--- a/about.html
+++ b/about.html
@@ -39,19 +39,6 @@
 </head>
 <body class="barber_version">
 
-    <!-- LOADER -->
-    <div id="preloader">
-        <div class="cube-wrapper">
-		  <div class="cube-folding">
-			<span class="leaf1"></span>
-			<span class="leaf2"></span>
-			<span class="leaf3"></span>
-			<span class="leaf4"></span>
-		  </div>
-		  <span class="loading" data-name="Loading">SMBarber Loading</span>
-		</div>
-    </div><!-- end loader -->
-    <!-- END LOADER -->
 
     <div id="wrapper">
 
@@ -128,9 +115,9 @@
 						<div class="col-md-12">
 							<div class="about-tab">
 								<ul class="nav nav-tabs">
-									<li class="active"><a href="#tab_a" data-toggle="tab">Nossa Missão</a></li>
-									<li><a href="#tab_b" data-toggle="tab">Porquê nós?</a></li>
-									<li><a href="#tab_c" data-toggle="tab">Sobre Nós</a></li>								
+									<li class="active"><a href="#tab_a" data-toggle="tab">Missão</a></li>
+									<li><a href="#tab_b" data-toggle="tab">Valores</a></li>
+									<li><a href="#tab_c" data-toggle="tab">Objetivos</a></li>								
 								</ul>
 								<div class="tab-content">
 									<div class="tab-pane fade in active" id="tab_a">
