--- a/services.html
+++ b/services.html
@@ -74,12 +74,12 @@
 						<div class="col-xs-12 col-sm-12 col-md-12">
 							<div class="title title-1 text-center">
 								<div class="title--heading">
-									<h1>Our Services</h1>
+									<h1>Nossos Serviços</h1>
 								</div>
 								<div class="clearfix"></div>
 								<ol class="breadcrumb">
 									<li><a href="index-3.html">Home</a></li>
-									<li class="active">Our Services</li>
+									<li class="active">Nossos Serviços</li>
 								</ol>
 								<div class="much">
 									<img src="uploads/mustache.png" alt=""/>
@@ -92,15 +92,15 @@
 			</div><!-- end all-page-bar -->
 
             <section class="section nopad cac text-center">
-                <a href="#"><h3>Interesting our awesome barber services? Just drop an appointment form below!</h3></a>
+                <a href="#"><h3>Serviços e Atendimento de qualidade</h3></a>
             </section>
 
             <div id="services" class="section lb">
                 <div class="container-fluid">
                     <div class="section-title row text-center">
                         <div class="col-md-8 col-md-offset-2">
-                        <small>WELCOME TO THE OUR BARBER SHOP</small>
-                        <h3>OUR SERVICES</h3>
+                        <small>LISTA DE SERVIÇOS</small>
+                        <h3>NOSSOS SERVIÇOS</h3>
                         <hr class="grd1">
                         <p class="lead">Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
                         </div>
@@ -110,143 +110,78 @@
                         <div class="col-md-6">
                             <div class="service-wrap clearfix">
                                 <img src="uploads/barber_service_01.jpg" alt="" class="img-responsive img-rounded alignleft">
-                                <h4>beard, mustache care</h4>
-                                <p>Etiam materials ut mollis tellus, vel posuere nulla. Etiam sit amet massa sodales aliquam at eget quam. Integer ultricies et magna quis.</p>
+                                <h4>Nome do Serviço</h4>
+                                <p>Algum texto descrevendo este serviço, exaltando as especificações técnicas e de estilos de modo a atrair o cliente.</p>
                             </div><!-- end issue -->
 
                             <div class="service-wrap clearfix">
                                 <img src="uploads/barber_service_02.jpg" alt="" class="img-responsive img-rounded alignleft">
-                                <h4>detailed feather cleaning</h4>
-                                <p>Etiam materials ut mollis tellus, vel posuere nulla. Etiam sit amet lacus vitae massa sodales aliquam at eget quam. Integer ultricies et magna quis.</p>
+                                <h4>Nome do Serviço</h4>
+                                <p>Algum texto descrevendo este serviço, exaltando as especificações técnicas e de estilos de modo a atrair o cliente.</p>
                             </div><!-- end issue -->
 
                             <div class="service-wrap lastchild clearfix">
                                 <img src="uploads/barber_service_03.jpg" alt="" class="img-responsive img-rounded alignleft">
-                                <h4>facial and skin care</h4>
-                                <p>Etiam materials ut mollis tellus, vel posuere nulla. Etiam sit amet lacus vitae massa sodales aliquam at eget quam. Integer ultricies et magna quis.</p>
+                                <h4>Nome do Serviço</h4>
+                                <p>Algum texto descrevendo este serviço, exaltando as especificações técnicas e de estilos de modo a atrair o cliente.</p>
                             </div><!-- end issue -->
                         </div><!-- end col -->
 
                         <div class="col-md-6">
                             <div class="service-wrap clearfix">
                                 <img src="uploads/barber_service_04.jpg" alt="" class="img-responsive img-rounded alignleft">
-                                <h4>studio shots</h4>
-                                <p>Etiam materials ut mollis tellus, vel posuere nulla. Etiam sit amet massa sodales aliquam at eget quam. Integer ultricies et magna quis.</p>
+                                <h4>Nome do Serviço</h4>
+                                <p>Algum texto descrevendo este serviço, exaltando as especificações técnicas e de estilos de modo a atrair o cliente.</p>
                             </div><!-- end issue -->
 
                             <div class="service-wrap clearfix">
                                 <img src="uploads/barber_service_05.jpg" alt="" class="img-responsive img-rounded alignleft">
-                                <h4>forming the beard</h4>
-                                <p>Etiam materials ut mollis tellus, vel posuere nulla. Etiam sit amet lacus vitae massa sodales aliquam at eget quam. Integer ultricies et magna quis.</p>
+                                <h4>Nome do Serviço</h4>
+                                <p>Algum texto descrevendo este serviço, exaltando as especificações técnicas e de estilos de modo a atrair o cliente.</p>
                             </div><!-- end issue -->
 
                             <div class="service-wrap lastchild clearfix">
                                 <img src="uploads/barber_service_06.jpg" alt="" class="img-responsive img-rounded alignleft">
-                                <h4>hair wash</h4>
-                                <p>Etiam materials ut mollis tellus, vel posuere nulla. Etiam sit amet lacus vitae massa sodales aliquam at eget quam. Integer ultricies et magna quis.</p>
+                                <h4>Nome do Serviço</h4>
+                                <p>Algum texto descrevendo este serviço, exaltando as especificações técnicas e de estilos de modo a atrair o cliente.</p>
                             </div><!-- end issue -->
                         </div><!-- end col -->
                     </div>
 
-                    <hr class="invis4">
 
                     <div class="text-center">
-                        <a href="#services" data-scroll class="btn btn-light btn-radius btn-brd grd1 effect-1">APPOINTMENT NOW</a>
+                        <a href="#services" data-scroll class="btn btn-light btn-radius btn-brd grd1 effect-1">AGENDAR AGORA</a>
                     </div>
                 </div><!-- end container -->
             </div><!-- end section -->
 
-            <div id="testimonials" class="parallax section db parallax-off" style="background-image:url('uploads/parallax_20.jpg');">
-                <div class="container-fluid">
-                    <div class="section-title row text-center">
-                        <div class="col-md-8 col-md-offset-2">
-                        <small>LET'S SEE OUR TESTIMONIALS</small>
-                        <h3>HAPPY TESTIMONIALS</h3>
-                        <hr class="grd1">
-                        <p class="lead">Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
-                        </div>
-                    </div><!-- end title -->
-
-                    <div class="row">
-                        <div class="col-md-12 col-sm-12">
-                            <div class="testi-carousel owl-carousel owl-theme">                                
-                                <div class="testimonial clearfix">
-                                    <div class="desc">
-                                        <h3><i class="fa fa-quote-left"></i> Wonderful Support!</h3>
-                                        <p class="lead">They have got my project on time with the competition with a sed highly skilled, and experienced & professional team.</p>
-                                    </div>
-                                    <div class="testi-meta">
-                                        <img src="uploads/testi_01.png" alt="" class="img-responsive alignright">
-                                        <h4>James Fernando <small>- Manager of Racer</small></h4>
-                                    </div>
-                                    <!-- end testi-meta -->
-                                </div>
-                                <!-- end testimonial -->
-                                <div class="testimonial clearfix">
-                                    <div class="desc">
-                                        <h3><i class="fa fa-quote-left"></i> Awesome Services!</h3>
-                                        <p class="lead">Explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you completed.</p>
-                                    </div>
-                                    <div class="testi-meta">
-                                        <img src="uploads/testi_02.png" alt="" class="img-responsive alignright">
-                                        <h4>Jacques Philips <small>- Designer</small></h4>
-                                    </div>
-                                    <!-- end testi-meta -->
-                                </div>
-                                <!-- end testimonial -->
-                                <div class="testimonial clearfix">
-                                    <div class="desc">
-                                        <h3><i class="fa fa-quote-left"></i> Great & Talented Team!</h3>
-                                        <p class="lead">The master-builder of human happines no one rejects, dislikes avoids pleasure itself, because it is very pursue pleasure. </p>
-                                    </div>
-                                    <div class="testi-meta">
-                                        <img src="uploads/testi_03.png" alt="" class="img-responsive alignright">
-                                        <h4>Venanda Mercy <small>- Newyork City</small></h4>
-                                    </div>
-                                    <!-- end testi-meta -->
-                                </div>
-                                <!-- end testimonial -->
-								<div class="testimonial clearfix">
-                                    <div class="desc">
-                                        <h3><i class="fa fa-quote-left"></i> Great & Talented Team!</h3>
-                                        <p class="lead">The master-builder of human happines no one rejects, dislikes avoids pleasure itself, because it is very pursue pleasure. </p>
-                                    </div>
-                                    <div class="testi-meta">
-                                        <img src="uploads/testi_03.png" alt="" class="img-responsive alignright">
-                                        <h4>Venanda Mercy <small>- Newyork City</small></h4>
-                                    </div>
-                                    <!-- end testi-meta -->
-                                </div>
-                                <!-- end testimonial -->
-                            </div><!-- end carousel -->
-                        </div><!-- end col -->
-                    </div><!-- end row -->
-                </div><!-- end container -->
-            </div><!-- end section -->
+           
 
             <div class="copyrights">
                 <div class="container-fluid">
                     <div class="footer-distributed">
                         <div class="footer-left">
                             <p class="footer-links">
-                                <a href="#">Home</a>
-                                <a href="#">Blog</a>
-                                <a href="#">Pricing</a>
-                                <a href="#">About</a>
-                                <a href="#">Faq</a>
-                                <a href="#">Contact</a>
+                                <a href="index.html">Home</a>
+					            <a href="about.html">Sobre Nós</a>
+					            <a href="services.html">Serviços</a>
+            					<a href="barbers.html">Nossa Equipe</a>
+			            		<a href="appointment.html">Horário</a>
+					            <a href="contact.html">Contacto</a>
                             </p>
-                            <p class="footer-company-name">All Rights Reserved. &copy; 2018 <a href="#">SMBarber</a> Design By : <a href="https://html.design/">html design</a></p>
-                        </div>
-
-                        <div class="footer-right">
-                            <form method="get" action="#">
-                                <input placeholder="Subscribe our newsletter.." name="search">
-                                <i class="fa fa-envelope-o"></i>
-                            </form>
+                            <p class="footer-company-name">Todos os direitos reservados. &copy; <span class="ano_atual">2022</span> &nbsp; <a href="#">July Otchacati - Salão de Beleza Estético</a></p>
                         </div>
                     </div>
+                    
                 </div><!-- end container -->
+                <div class="footer-links-social">
+                    <ul class="list-unstyled">
+                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa fa-whatsapp"></i></a></li>
+                        <li><a href="#"><i class="fa fa-google"></i></a></li>
+                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                    </ul>
+                </div>
             </div><!-- end copyrights -->
         </div>
     </div><!-- end wrapper -->
