pagina nossa equipe remodelada

--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
                                 <p>Uma mensagem que a pessoa queira passar, uma breve descrição sobre ela mesma ou mesmo uma observação sobre suas competencias técnicas.</p>
                             </div><!--widget -->
                         </div><!-- end col -->
+                        <a href="/barbers.html" class="btn btn-light btn-sm btn-radius btn-brd grd1 effect-1">VER MAIS</a>
                     </div><!-- end row -->
                 </div><!-- end container -->
             </div><!-- end section -->
@@ -334,6 +335,7 @@
                                 <!-- end testimonial -->
                             </div><!-- end carousel -->
                         </div><!-- end col -->
+
                     </div><!-- end row -->
                 </div><!-- end container -->
             </div><!-- end section -->
