--- a/appointment.html
+++ b/appointment.html
@@ -74,12 +74,12 @@
 						<div class="col-xs-12 col-sm-12 col-md-12">
 							<div class="title title-1 text-center">
 								<div class="title--heading">
-									<h1>Appointment</h1>
+									<h1>Horário</h1>
 								</div>
 								<div class="clearfix"></div>
 								<ol class="breadcrumb">
 									<li><a href="index-3.html">Home</a></li>
-									<li class="active">Appointment</li>
+									<li class="active">Horário</li>
 								</ol>
 								<div class="much">
 									<img src="uploads/mustache.png" alt=""/>
@@ -92,15 +92,15 @@
 			</div><!-- end all-page-bar -->
 
             <section class="section nopad cac text-center">
-                <a href="#"><h3>Interesting our awesome barber services? Just drop an appointment form below!</h3></a>
+                <a href="#"><h3>Saiba de antemão os momentos do dia em que abrimos e fechamos o Salão.</h3></a>
             </section>
 
             <div id="appointment" class="section wb">
                 <div class="container-fluid">
                     <div class="section-title row text-center">
                         <div class="col-md-8 col-md-offset-2">
-                        <small>LET'S MAKE AN APPOINTMENT FOR YOUR LIFE</small>
-                        <h3>Book now</h3>
+                        <small>HORÁRIO CONSISTENTE</small>
+                        <h3 class="titulo-destaque">Disponiveis de <i>Segunda</i> à <i>Sabádo</i></h3>
                         <hr class="grd1">
                         <p class="lead">Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
                         </div>
@@ -109,29 +109,29 @@
                     <div class="row">
 						<div class="col-md-6">
 							<div class="appointment-left">
-								<h2>Opening Time</h2>
+								<h2>Horário</h2>
 								<div class="appointment-time">
 									<ul>
 										<li>
-											<span>Monday </span><span>9am-6pm</span>
+											<span>Segunda-Feira </span><span>9h - 18h</span>
 										</li>
 										<li>
-											<span>Tuesday </span><span>9am-6pm</span>
+											<span>Terça-Feira </span><span>9h - 18h</span>
 										</li>
 										<li>
-											<span>Wednesday </span><span>9am-6pm</span>
+											<span>Quarta-Feira </span><span>9h - 18h</span>
 										</li>
 										<li>
-											<span>Thursday </span><span>9am-6pm</span>
+											<span>Quinta-Feira </span><span>9h - 18h</span>
 										</li>
 										<li>
-											<span>Friday  </span><span>9am-6pm</span>
+											<span>Sexta-Feira  </span><span>9h - 18h</span>
 										</li>
 										<li>
-											<span>Saturday  </span><span>10am-4pm</span>
+											<span>Sábado  </span><span>10h - 16h</span>
 										</li>
 										<li>
-											<span>Sunday  </span><span>CLOSED</span>
+											<span>Domingo  </span><span>FECHADO</span>
 										</li>
 									</ul>
 								</div>
@@ -143,27 +143,27 @@
                                 <form id="contactform" class="row" action="contact.php" name="contactform" method="post">
                                     <fieldset class="row-fluid">
                                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                            <input type="text" name="first_name" id="first_name" class="form-control" placeholder="First Name">
+                                            <input type="text" name="first_name" id="first_name" class="form-control" placeholder="Nome">
                                         </div>
                                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                            <input type="text" name="last_name" id="last_name" class="form-control" placeholder="Last Name">
+                                            <input type="text" name="last_name" id="last_name" class="form-control" placeholder="Sobrenome">
                                         </div>
                                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                            <input type="email" name="email" id="email" class="form-control" placeholder="Your Email">
+                                            <input type="email" name="email" id="email" class="form-control" placeholder="Email">
                                         </div>
                                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                            <input type="text" name="phone" id="phone" class="form-control" placeholder="Your Phone">
+                                            <input type="text" name="phone" id="phone" class="form-control" placeholder="Telefone">
                                         </div>
                                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                            <label class="sr-only">Select Time</label>
-                                            <select name="select_service" id="select_service" class="selectpicker form-control" data-style="btn-white">
-                                                <option value="selecttime">Select Time</option>
-                                                <option value="Weekdays">Weekdays</option>
-                                                <option value="Weekend">Weekend</option>
+                                            <label class="sr-only">Escolher Horário</label>
+                                            <select name="select_service" value="" id="select_service" class="selectpicker" data-style="btn-white">
+                                                <option value="" selected>Escolher horário</option>
+                                                <option value="Weekdays">Dias na semana</option>
+                                                <option value="Weekend">Finais de semana</option>
                                             </select>
                                         </div>
                                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                            <textarea class="form-control" name="comments" id="comments" rows="6" placeholder="Give us more details.."></textarea>
+                                            <textarea class="form-control" name="comments" id="comments" rows="6" placeholder="Escreva alguma mensagem"></textarea>
                                         </div>
                                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
                                             <button type="submit" value="SEND" id="submit" class="btn btn-light btn-radius btn-brd grd1 btn-block subt">Get Appointment</button>
