--- a/appointment.html
+++ b/appointment.html
@@ -139,7 +139,9 @@
 						</div>
                         <div class="col-md-6">
                             <div class="contact_form">
-                                <div id="message"></div>
+                                <div id="message">
+                                    <h3 class="form-contact-title">Formulário de Contato</h3>
+                                </div>
                                 <form id="contactform" class="row" action="contact.php" name="contactform" method="post">
                                     <fieldset class="row-fluid">
                                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
@@ -166,7 +168,7 @@
                                             <textarea class="form-control" name="comments" id="comments" rows="6" placeholder="Escreva alguma mensagem"></textarea>
                                         </div>
                                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-                                            <button type="submit" value="SEND" id="submit" class="btn btn-light btn-radius btn-brd grd1 btn-block subt">Get Appointment</button>
+                                            <button type="submit" value="SEND" id="submit" class="btn btn-light btn-radius btn-brd grd1 subt">Enviar</button>
                                         </div>
                                     </fieldset>
                                 </form>
