ajustando os enderecos - portugues

--- a/barbers.html
+++ b/barbers.html
@@ -54,11 +54,11 @@
 				</div>
 				<ul class="sidebar-nav">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">Sobre Nós</a></li>
-					<li><a href="services.html">Serviços</a></li>
-					<li><a class="active" href="barbers.html">Nossa Equipe</a></li>
-					<li><a href="appointment.html">Horário</a></li>
-					<li><a href="contact.html">Contacto</a></li>
+					<li><a href="sobre.html">Sobre Nós</a></li>
+					<li><a href="servicos.html">Serviços</a></li>
+					<li><a class="active" href="equipe.html">Nossa Equipe</a></li>
+					<li><a href="horario.html">Horário</a></li>
+					<li><a href="contato.html">Contacto</a></li>
 				</ul>
 			</div>
         </div>
@@ -241,11 +241,11 @@
                         <div class="footer-left">
                             <p class="footer-links">
                                 <a href="index.html">Home</a>
-					            <a href="about.html">Sobre Nós</a>
-					            <a href="services.html">Serviços</a>
-            					<a href="barbers.html">Nossa Equipe</a>
-			            		<a href="appointment.html">Horário</a>
-					            <a href="contact.html">Contacto</a>
+					            <a href="sobre.html">Sobre Nós</a>
+					            <a href="servicos.html">Serviços</a>
+            					<a href="equipe.html">Nossa Equipe</a>
+			            		<a href="horario.html">Horário</a>
+					            <a href="contato.html">Contacto</a>
                             </p>
                             <p class="footer-company-name">Todos os direitos reservados. &copy; <span class="ano_atual">2022</span> &nbsp; <a href="#">July Otchacati - Salão de Beleza Estético</a></p>
                         </div>
