--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 				</div>
 				<ul class="sidebar-nav">
 					<li><a class="active" href="index.html">Home</a></li>
-					<li><a href="about.html">Sobre Nós</a></li>
-					<li><a href="services.html">Serviços</a></li>
-					<li><a href="barbers.html">Nossa Equipe</a></li>
-					<li><a href="appointment.html">Horário</a></li>
-					<li><a href="contact.html">Contacto</a></li>
+					<li><a href="sobre.html">Sobre Nós</a></li>
+					<li><a href="servicos.html">Serviços</a></li>
+					<li><a href="equipe.html">Nossa Equipe</a></li>
+					<li><a href="horario.html">Horário</a></li>
+					<li><a href="contato.html">Contacto</a></li>
 				</ul>
 			</div>
         </div>
@@ -144,7 +144,7 @@
 
                                 <!-- <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed vitae rutrum neque. Ut id erat sit amet libero bibendum aliquam. Donec ac egestas libero, eu bibendum risus. Phasellus et congue justo. </p> -->
 
-                                <a href="/about.html" class="btn btn-light btn-sm btn-radius btn-brd grd1 effect-1">MAIS SOBRE NÓS</a>
+                                <a href="/sobre.html" class="btn btn-light btn-sm btn-radius btn-brd grd1 effect-1">MAIS SOBRE NÓS</a>
                             </div><!-- end messagebox -->
                         </div><!-- end col -->
                     </div><!-- end row -->
@@ -267,7 +267,7 @@
                                 <p>Uma mensagem que a pessoa queira passar, uma breve descrição sobre ela mesma ou mesmo uma observação sobre suas competencias técnicas.</p>
                             </div><!--widget -->
                         </div><!-- end col -->
-                        <a href="/barbers.html" class="btn btn-light btn-sm btn-radius btn-brd grd1 effect-1">VER MAIS</a>
+                        <a href="/equipe.html" class="btn btn-light btn-sm btn-radius btn-brd grd1 effect-1">VER MAIS</a>
                     </div><!-- end row -->
                 </div><!-- end container -->
             </div><!-- end section -->
@@ -346,11 +346,11 @@
                         <div class="footer-left">
                             <p class="footer-links">
                                 <a href="index.html">Home</a>
-					            <a href="about.html">Sobre Nós</a>
-					            <a href="services.html">Serviços</a>
-            					<a href="barbers.html">Nossa Equipe</a>
-			            		<a href="appointment.html">Horário</a>
-					            <a href="contact.html">Contacto</a>
+					            <a href="sobre.html">Sobre Nós</a>
+					            <a href="servicos.html">Serviços</a>
+            					<a href="equipe.html">Nossa Equipe</a>
+			            		<a href="horario.html">Horário</a>
+					            <a href="contato.html">Contacto</a>
                             </p>
                             <p class="footer-company-name">Todos os direitos reservados. &copy; <span class="ano_atual">2022</span> &nbsp; <a href="#">July Otchacati - Salão de Beleza Estético</a></p>
                         </div>
