--- a/appointment.html
+++ b/appointment.html
@@ -54,11 +54,11 @@
 				</div>
 				<ul class="sidebar-nav">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">Sobre Nós</a></li>
-					<li><a href="services.html">Serviços</a></li>
-					<li><a href="barbers.html">Nossa Equipe</a></li>
-					<li><a class="active" href="appointment.html">Horário</a></li>
-					<li><a href="contact.html">Contacto</a></li>
+					<li><a href="sobre.html">Sobre Nós</a></li>
+					<li><a href="servicos.html">Serviços</a></li>
+					<li><a href="equipe.html">Nossa Equipe</a></li>
+					<li><a class="active" href="horario.html">Horário</a></li>
+					<li><a href="contato.html">Contacto</a></li>
 				</ul>
 			</div>
         </div>
@@ -178,97 +178,33 @@
                 </div><!-- end container -->
             </div><!-- end section -->
 
-            <div id="testimonials" class="parallax section db parallax-off" style="background-image:url('uploads/parallax_20.jpg');">
-                <div class="container-fluid">
-                    <div class="section-title row text-center">
-                        <div class="col-md-8 col-md-offset-2">
-                        <small>LET'S SEE OUR TESTIMONIALS</small>
-                        <h3>HAPPY TESTIMONIALS</h3>
-                        <hr class="grd1">
-                        <p class="lead">Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
-                        </div>
-                    </div><!-- end title -->
-
-                    <div class="row">
-                        <div class="col-md-12 col-sm-12">
-                            <div class="testi-carousel owl-carousel owl-theme">                                
-                                <div class="testimonial clearfix">
-                                    <div class="desc">
-                                        <h3><i class="fa fa-quote-left"></i> Wonderful Support!</h3>
-                                        <p class="lead">They have got my project on time with the competition with a sed highly skilled, and experienced & professional team.</p>
-                                    </div>
-                                    <div class="testi-meta">
-                                        <img src="uploads/testi_01.png" alt="" class="img-responsive alignright">
-                                        <h4>James Fernando <small>- Manager of Racer</small></h4>
-                                    </div>
-                                    <!-- end testi-meta -->
-                                </div>
-                                <!-- end testimonial -->
-                                <div class="testimonial clearfix">
-                                    <div class="desc">
-                                        <h3><i class="fa fa-quote-left"></i> Awesome Services!</h3>
-                                        <p class="lead">Explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you completed.</p>
-                                    </div>
-                                    <div class="testi-meta">
-                                        <img src="uploads/testi_02.png" alt="" class="img-responsive alignright">
-                                        <h4>Jacques Philips <small>- Designer</small></h4>
-                                    </div>
-                                    <!-- end testi-meta -->
-                                </div>
-                                <!-- end testimonial -->
-                                <div class="testimonial clearfix">
-                                    <div class="desc">
-                                        <h3><i class="fa fa-quote-left"></i> Great & Talented Team!</h3>
-                                        <p class="lead">The master-builder of human happines no one rejects, dislikes avoids pleasure itself, because it is very pursue pleasure. </p>
-                                    </div>
-                                    <div class="testi-meta">
-                                        <img src="uploads/testi_03.png" alt="" class="img-responsive alignright">
-                                        <h4>Venanda Mercy <small>- Newyork City</small></h4>
-                                    </div>
-                                    <!-- end testi-meta -->
-                                </div>
-                                <!-- end testimonial -->
-								<div class="testimonial clearfix">
-                                    <div class="desc">
-                                        <h3><i class="fa fa-quote-left"></i> Great & Talented Team!</h3>
-                                        <p class="lead">The master-builder of human happines no one rejects, dislikes avoids pleasure itself, because it is very pursue pleasure. </p>
-                                    </div>
-                                    <div class="testi-meta">
-                                        <img src="uploads/testi_03.png" alt="" class="img-responsive alignright">
-                                        <h4>Venanda Mercy <small>- Newyork City</small></h4>
-                                    </div>
-                                    <!-- end testi-meta -->
-                                </div>
-                                <!-- end testimonial -->
-                            </div><!-- end carousel -->
-                        </div><!-- end col -->
-                    </div><!-- end row -->
-                </div><!-- end container -->
-            </div><!-- end section -->
+           
 
             <div class="copyrights">
                 <div class="container-fluid">
                     <div class="footer-distributed">
                         <div class="footer-left">
                             <p class="footer-links">
-                                <a href="#">Home</a>
-                                <a href="#">Blog</a>
-                                <a href="#">Pricing</a>
-                                <a href="#">About</a>
-                                <a href="#">Faq</a>
-                                <a href="#">Contact</a>
+                                <a href="index.html">Home</a>
+					            <a href="sobre.html">Sobre Nós</a>
+					            <a href="servicos.html">Serviços</a>
+            					<a href="equipe.html">Nossa Equipe</a>
+			            		<a href="horario.html">Horário</a>
+					            <a href="contato.html">Contacto</a>
                             </p>
-                            <p class="footer-company-name">All Rights Reserved. &copy; 2018 <a href="#">SMBarber</a> Design By : <a href="https://html.design/">html design</a></p>
-                        </div>
-
-                        <div class="footer-right">
-                            <form method="get" action="#">
-                                <input placeholder="Subscribe our newsletter.." name="search">
-                                <i class="fa fa-envelope-o"></i>
-                            </form>
+                            <p class="footer-company-name">Todos os direitos reservados. &copy; <span class="ano_atual">2022</span> &nbsp; <a href="#">July Otchacati - Salão de Beleza Estético</a></p>
                         </div>
                     </div>
+                    
                 </div><!-- end container -->
+                <div class="footer-links-social">
+                    <ul class="list-unstyled">
+                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa fa-whatsapp"></i></a></li>
+                        <li><a href="#"><i class="fa fa-google"></i></a></li>
+                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                    </ul>
+                </div>
             </div><!-- end copyrights -->
         </div>
     </div><!-- end wrapper -->
