--- a/contact.html
+++ b/contact.html
@@ -54,11 +54,11 @@
 				</div>
 				<ul class="sidebar-nav">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">Sobre Nós</a></li>
-					<li><a href="services.html">Serviços</a></li>
-					<li><a href="barbers.html">Nossa Equipe</a></li>
-					<li><a href="appointment.html">Horário</a></li>
-					<li><a class="active" href="contact.html">Contacto</a></li>
+					<li><a href="sobre.html">Sobre Nós</a></li>
+					<li><a href="servicos.html">Serviços</a></li>
+					<li><a href="equipe.html">Nossa Equipe</a></li>
+					<li><a href="horario.html">Horário</a></li>
+					<li><a class="active" href="contato.html">Contacto</a></li>
 				</ul>
 			</div>
         </div>
