pagina contato eliminada

--- a/horario.html
+++ b/horario.html
@@ -58,7 +58,6 @@
 					<li><a href="servicos.html">Serviços</a></li>
 					<li><a href="equipe.html">Nossa Equipe</a></li>
 					<li><a class="active" href="horario.html">Horário</a></li>
-					<li><a href="contato.html">Contacto</a></li>
 				</ul>
 			</div>
         </div>
@@ -95,7 +94,7 @@
                 <a href="#"><h3>Saiba de antemão os momentos do dia em que abrimos e fechamos o Salão.</h3></a>
             </section>
 
-            <div id="appointment" class="section wb">
+            <div id="appointment" class="section wb bg-body">
                 <div class="container-fluid">
                     <div class="section-title row text-center">
                         <div class="col-md-8 col-md-offset-2">
@@ -177,8 +176,6 @@
                     </div><!-- end row -->
                 </div><!-- end container -->
             </div><!-- end section -->
-
-           
 
             <div class="copyrights">
                 <div class="container-fluid">
