--- a/sobre.html
+++ b/sobre.html
@@ -58,7 +58,7 @@
 					<li><a href="servicos.html">Serviços</a></li>
 					<li><a href="equipe.html">Nossa Equipe</a></li>
 					<li><a href="horario.html">Horário</a></li>
-					<li><a href="contato.html">Contacto</a></li>
+					
 				</ul>
 			</div>
         </div>
@@ -95,7 +95,7 @@
                 <a href="#"><h3 style="font-size: 18px;">Conheça mais sobre o historial, motivações e objetivos da <b>July Otchacati - Salão de Beleza Estético</b></h3></a>
             </section>
 
-            <div class="section wb">
+            <div class="section wb bg-body">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 text-center">
