imagens dos funcionarios adicionadas

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
                             <div class="widget clearfix">
 								<div class="hover-br">
-									<img src="/images/demo1.webp" alt="" class="img-responsive">
+									<img src="/images/func0.jpg" alt="" class="img-responsive">
 									<div class="social-up-hover">
 										<div class="footer-social">
 											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
@@ -218,7 +218,7 @@
 									</div>
 								</div>
                                 <div class="widget-title">
-                                    <h3>Nome da Pessoa</h3>
+                                    <h3>Juliana Luiz</h3>
                                     <small>A Fundadora</small>
                                 </div>
                                 <!-- end title -->
@@ -229,7 +229,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
                             <div class="widget clearfix">
 								<div class="hover-br">
-									<img src="/images/demo1.webp" alt="" class="img-responsive">
+									<img src="/images/func1.jpg" alt="" class="img-responsive">
 									<div class="social-up-hover">
 										<div class="footer-social">
 											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
@@ -239,8 +239,8 @@
 									</div>
 								</div>
                                 <div class="widget-title">
-                                    <h3>Nome da pessoa</h3>
-                                    <small>A Cabelereira</small>
+                                    <h3>Mateus Hamuyela</h3>
+                                    <small>Barbeiro</small>
                                 </div>
                                 <!-- end title -->
                                 <p>Uma mensagem que a pessoa queira passar, uma breve descrição sobre ela mesma ou mesmo uma observação sobre suas competencias técnicas.</p>
@@ -250,7 +250,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
                             <div class="widget clearfix">
 								<div class="hover-br">
-									<img src="/images/demo1.webp" alt="" class="img-responsive">
+									<img src="/images/func2.jpg" alt="" class="img-responsive">
 									<div class="social-up-hover">
 										<div class="footer-social">
 											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
@@ -260,8 +260,8 @@
 									</div>
 								</div>
                                 <div class="widget-title">
-                                    <h3>Nome da pessoa</h3>
-                                    <small>O Barbeiro</small>
+                                    <h3>Afonso Dumbo</h3>
+                                    <small>Chefe de comunição e Marketing</small>
                                 </div>
                                 <!-- end title -->
                                 <p>Uma mensagem que a pessoa queira passar, uma breve descrição sobre ela mesma ou mesmo uma observação sobre suas competencias técnicas.</p>
