--- a/equipe.html
+++ b/equipe.html
@@ -110,7 +110,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
                             <div class="widget clearfix">
 								<div class="hover-br">
-									<img src="/images/demo1.webp" alt="" class="img-responsive">
+									<img src="/images/func0.jpg" alt="" class="img-responsive">
 									<div class="social-up-hover">
 										<div class="footer-social">
 											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
@@ -120,7 +120,7 @@
 									</div>
 								</div>
                                 <div class="widget-title">
-                                    <h3>Nome da Pessoa</h3>
+                                    <h3>Juliana Luiz</h3>
                                     <small>A Fundadora</small>
                                 </div>
                                 <!-- end title -->
@@ -131,7 +131,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
                             <div class="widget clearfix">
 								<div class="hover-br">
-									<img src="/images/demo1.webp" alt="" class="img-responsive">
+									<img src="/images/func1.jpg" alt="" class="img-responsive">
 									<div class="social-up-hover">
 										<div class="footer-social">
 											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
@@ -141,8 +141,8 @@
 									</div>
 								</div>
                                 <div class="widget-title">
-                                    <h3>Nome da pessoa</h3>
-                                    <small>A Cabelereira</small>
+                                    <h3>Mateus Hamuyela</h3>
+                                    <small>Barbeiro</small>
                                 </div>
                                 <!-- end title -->
                                 <p>Uma mensagem que a pessoa queira passar, uma breve descrição sobre ela mesma ou mesmo uma observação sobre suas competencias técnicas.</p>
@@ -152,7 +152,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
                             <div class="widget clearfix">
 								<div class="hover-br">
-									<img src="/images/demo1.webp" alt="" class="img-responsive">
+									<img src="/images/func2.jpg" alt="" class="img-responsive">
 									<div class="social-up-hover">
 										<div class="footer-social">
 											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
@@ -162,8 +162,8 @@
 									</div>
 								</div>
                                 <div class="widget-title">
-                                    <h3>Nome da pessoa</h3>
-                                    <small>O Barbeiro</small>
+                                    <h3>Afonso Dumbo</h3>
+                                    <small>Chefe de comunição e Marketing</small>
                                 </div>
                                 <!-- end title -->
                                 <p>Uma mensagem que a pessoa queira passar, uma breve descrição sobre ela mesma ou mesmo uma observação sobre suas competencias técnicas.</p>
@@ -172,7 +172,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
                             <div class="widget clearfix">
 								<div class="hover-br">
-									<img src="/images/demo1.webp" alt="" class="img-responsive">
+									<img src="/images/func3.jpg" alt="" class="img-responsive">
 									<div class="social-up-hover">
 										<div class="footer-social">
 											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
@@ -182,8 +182,8 @@
 									</div>
 								</div>
                                 <div class="widget-title">
-                                    <h3>Nome da pessoa</h3>
-                                    <small>O Barbeiro</small>
+                                    <h3>Eduarda Maliti</h3>
+                                    <small>Manicurista e Pedicurista</small>
                                 </div>
                                 <!-- end title -->
                                 <p>Uma mensagem que a pessoa queira passar, uma breve descrição sobre ela mesma ou mesmo uma observação sobre suas competencias técnicas.</p>
@@ -192,7 +192,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
                             <div class="widget clearfix">
 								<div class="hover-br">
-									<img src="/images/demo1.webp" alt="" class="img-responsive">
+									<img src="/images/func4.jpg" alt="" class="img-responsive">
 									<div class="social-up-hover">
 										<div class="footer-social">
 											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
@@ -202,8 +202,8 @@
 									</div>
 								</div>
                                 <div class="widget-title">
-                                    <h3>Nome da pessoa</h3>
-                                    <small>O Barbeiro</small>
+                                    <h3>Ana Pena</h3>
+                                    <small>Cabelereira</small>
                                 </div>
                                 <!-- end title -->
                                 <p>Uma mensagem que a pessoa queira passar, uma breve descrição sobre ela mesma ou mesmo uma observação sobre suas competencias técnicas.</p>
@@ -212,7 +212,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
                             <div class="widget clearfix">
 								<div class="hover-br">
-									<img src="/images/demo1.webp" alt="" class="img-responsive">
+									<img src="/images/func5.jpg" alt="" class="img-responsive">
 									<div class="social-up-hover">
 										<div class="footer-social">
 											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
@@ -222,8 +222,28 @@
 									</div>
 								</div>
                                 <div class="widget-title">
-                                    <h3>Nome da pessoa</h3>
-                                    <small>O Barbeiro</small>
+                                    <h3>Maria Luíz</h3>
+                                    <small>Cabelereira</small>
+                                </div>
+                                <!-- end title -->
+                                <p>Uma mensagem que a pessoa queira passar, uma breve descrição sobre ela mesma ou mesmo uma observação sobre suas competencias técnicas.</p>
+                            </div><!--widget -->
+                        </div><!-- end col -->
+                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
+                            <div class="widget clearfix">
+								<div class="hover-br">
+									<img src="/images/func6.jpg" alt="" class="img-responsive">
+									<div class="social-up-hover">
+										<div class="footer-social">
+											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
+											<a href="#" class="btn grd1"><i class="fa fa-google"></i></a>
+											<a href="#" class="btn grd1"><i class="fa fa-whatsapp"></i></a>
+										</div>
+									</div>
+								</div>
+                                <div class="widget-title">
+                                    <h3>Vanusa dos Santos</h3>
+                                    <small>Maquilhadora</small>
                                 </div>
                                 <!-- end title -->
                                 <p>Uma mensagem que a pessoa queira passar, uma breve descrição sobre ela mesma ou mesmo uma observação sobre suas competencias técnicas.</p>
