imagem de usuario alterada para a padrao em TESTEMUNHOS

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                                         <p class="lead">Aqui vai algum comentário que esta pessoa está a fazer sobre o Salão da July, seus Serviços, suas experiencias enquanto cliente. Basicamente o seu testemundo sincero.</p>
                                     </div>
                                     <div class="testi-meta">
-                                        <img src="uploads/testi_01.png" alt="" class="img-responsive alignright">
+                                        <img src="/images/user.jpg" alt="" class="img-responsive alignright">
                                         <h4>Nome da Pessoa <small>- Profissão</small></h4>
                                     </div>
                                     <!-- end testi-meta -->
@@ -303,7 +303,7 @@
                                         <p class="lead">Aqui vai algum comentário que esta pessoa está a fazer sobre o Salão da July, seus Serviços, suas experiencias enquanto cliente. Basicamente o seu testemundo sincero.</p>
                                     </div>
                                     <div class="testi-meta">
-                                        <img src="/images/demo4.jpg" alt="" class="img-responsive alignright">
+                                        <img src="/images/user.jpg" alt="" class="img-responsive alignright">
                                         <h4>Nome da Pessoa <small>- Profissão</small></h4>
                                     </div>
                                     <!-- end testi-meta -->
@@ -314,7 +314,7 @@
                                         <p class="lead">Aqui vai algum comentário que esta pessoa está a fazer sobre o Salão da July, seus Serviços, suas experiencias enquanto cliente. Basicamente o seu testemundo sincero.</p>
                                     </div>
                                     <div class="testi-meta">
-                                        <img src="uploads/testi_01.png" alt="" class="img-responsive alignright">
+                                        <img src="/images/user.jpg" alt="" class="img-responsive alignright">
                                         <h4>Nome da Pessoa <small>- Profissão</small></h4>
                                     </div>
                                     <!-- end testi-meta -->
@@ -327,7 +327,7 @@
                                         <p class="lead">Aqui vai algum comentário que esta pessoa está a fazer sobre o Salão da July, seus Serviços, suas experiencias enquanto cliente. Basicamente o seu testemundo sincero.</p>
                                     </div>
                                     <div class="testi-meta">
-                                        <img src="/images/demo1.webp" alt="" class="img-responsive alignright">
+                                        <img src="/images/user.jpg" alt="" class="img-responsive alignright">
                                         <h4>Nome da Pessoa <small>- Profissão</small></h4>
                                     </div>
                                     <!-- end testi-meta -->
